Updates to swagger, tests, README and validation
